fix: autosize image all the way up to page (but...)
the content is now too narrow and that that
needs to be fixed

--- a/src/components/MemeGenerator/memegenerator.module.scss
+++ b/src/components/MemeGenerator/memegenerator.module.scss
@@ -4,8 +4,10 @@
 .container {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     //gap: 2.25rem;
-    height: 100%;
+
+
     margin: 0 auto;
 
     padding-left: 1rem;
