--- a/src/pages/memegen.module.scss
+++ b/src/pages/memegen.module.scss
@@ -1,3 +1,5 @@
 .pagecontainer {
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
